tests/rosetta/out/Smalltalk/abelian-sandpile-model-identity.out
/workspace/mochi/tests/rosetta/out/Smalltalk/abelian-sandpile-model-identity.st:4: parse error, expected '|' or identifier
