tests/rosetta/out/Smalltalk/abelian-sandpile-model-identity.st
" Generated by Mochi compiler v0.10.26 on 2025-07-16T09:48:35Z
"
| c i isStable nbs neighbors neighborsList pileString plus r res s s1 s2 s3 s3_a s3_b s3_id s4 s4b s5 topple |
neighborsList := [ | {{1. 3}. {0. 2. 4}. {1. 5}. {0. 4. 6}. {1. 3. 5. 7}. {2. 4. 8}. {3. 7}. {4. 6. 8}. {5. 7}} ].
plus := [:a :b | res := {}.
i := 0.
[(i < (a size))] whileTrue: [
  res := res copyWith: (a at: i + b at: i).
  i := (i + 1).
]
.
res ].
isStable := [:p | p do: [:v |
  ((v > 3)) ifTrue: [
    false
  ] .
]
.
true ].
topple := [:p | neighbors := neighborsList value.
i := 0.
[(i < (p size))] whileTrue: [
  ((p at: i > 3)) ifTrue: [
    p at: i put: (p at: i - 4).
    nbs := neighbors at: i.
    nbs do: [:j |
      p at: j put: (p at: j + 1).
    ]
    .
    0
  ] .
  i := (i + 1).
]
.
0 ].
pileString := [:p | s := ''.
r := 0.
[(r < 3)] whileTrue: [
  c := 0.
  [(c < 3)] whileTrue: [
    s := ((s + (p at: ((3 * r) + c) asString)) + ' ').
    c := (c + 1).
  ]
  .
  s := (s + '
').
  r := (r + 1).
]
.
s ].
Transcript show: 'Avalanche of topplings:
'; cr.
s4 := {4. 3. 3. 3. 1. 2. 0. 2. 3}.
Transcript show: (pileString value: s4) printString; cr.
[isStable value: s4 not] whileTrue: [
  topple value: s4.
  Transcript show: (pileString value: s4) printString; cr.
]
.
Transcript show: 'Commutative additions:
'; cr.
s1 := {1. 2. 0. 2. 1. 1. 0. 1. 3}.
s2 := {2. 1. 3. 1. 0. 1. 0. 1. 0}.
s3_a := plus value: s1 value: s2.
[isStable value: s3_a not] whileTrue: [
  topple value: s3_a.
]
.
s3_b := plus value: s2 value: s1.
[isStable value: s3_b not] whileTrue: [
  topple value: s3_b.
]
.
Transcript show: (((((pileString value: s1 + '
plus

') + pileString value: s2) + '
equals

') + pileString value: s3_a)) printString; cr.
Transcript show: (((((('and

' + pileString value: s2) + '
plus

') + pileString value: s1) + '
also equals

') + pileString value: s3_b)) printString; cr.
Transcript show: 'Addition of identity sandpile:
'; cr.
s3 := {3. 3. 3. 3. 3. 3. 3. 3. 3}.
s3_id := {2. 1. 2. 1. 0. 1. 2. 1. 2}.
s4b := plus value: s3 value: s3_id.
[isStable value: s4b not] whileTrue: [
  topple value: s4b.
]
.
Transcript show: (((((pileString value: s3 + '
plus

') + pileString value: s3_id) + '
equals

') + pileString value: s4b)) printString; cr.
Transcript show: 'Addition of identities:
'; cr.
s5 := plus value: s3_id value: s3_id.
[isStable value: s5 not] whileTrue: [
  topple value: s5.
]
.
Transcript show: (((((pileString value: s3_id + '
plus

') + pileString value: s3_id) + '
equals

') + pileString value: s5)) printString; cr.
